[package]
name = "ecdsa_verify"
version = "1.1.0"
authors = ["Joel Jakobsson <github@compiler.org>"]
edition = "2021"
description = "ECDSA signature verification."
keywords = ["ECDSA", "cryptography", "signature", "verification"]
license = "MIT"
repository = "https://github.com/joelonsql/ecdsa_verify"
documentation = "https://docs.rs/ecdsa_verify"
readme = "README.md"
categories = ["cryptography"]

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
hex = "0.4"
sha2 = "0.10"

[[bench]]
name = "verify"
